# fluentflet

./: .gitignore  README.md  pyproject.toml
fluentflet/utils/: __init__.py  runtime_icon_changer.py
fluentflet/window/: fluent_window.py
